# WhiteBox_test

./: .gitignore  CMakeLists.txt  gem.json
Code/: CMakeLists.txt  whitebox_editor_shared_files.cmake  whitebox_editor_supported_files.cmake
Code/Include/WhiteBox/: EditorWhiteBoxComponentBus.h  WhiteBoxToolApi.h
Code/Source/: EditorWhiteBoxComponent.cpp  EditorWhiteBoxComponent.h  EditorWhiteBoxComponentMode.cpp  EditorWhiteBoxDefaultShapeTypes.h  WhiteBoxToolApiReflection.cpp
Code/Source/Core/: WhiteBoxCsg.cpp  WhiteBoxCsgCore.cpp
Code/Source/SubComponentModes/: EditorWhiteBoxDefaultMode.cpp  EditorWhiteBoxDefaultMode.h  EditorWhiteBoxDefaultModeBus.h  EditorWhiteBoxEdgeRestoreMode.cpp  EditorWhiteBoxTransformMode.cpp  EditorWhiteBoxTransformMode.h  WhiteBoxNumericInput.h
Code/Source/Viewport/: WhiteBoxDrawShapeMode.cpp  WhiteBoxDrawShapeMode.h  WhiteBoxManipulatorViews.cpp
Code/Tests/: WhiteBoxPhysicsTest.cpp
Editor/Scripts/: CsgDemo.py  CsgInspect.py
